--- a/scramble-experiment.ipynb
+++ b/scramble-experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This experiment shows that even after the pixels in hand-written digits images are scrambled, they can still be clustered effectively. It also shows that t-SNE takes no information about the translation/rotaional/illumination invariance in a image, which is very different from typical image recognition tasks."
+    "This experiment shows that even after the pixels in hand-written digits images are scrambled, they can still be clustered effectively by t-SNE. It means that t-SNE doesn't take information about the translation/rotaional/illumination invariance in an image for clustering, which is very different from typical image recognition tasks. t-SNE itself doesn't have much to do with images, either."
    ]
   },
   {
@@ -728,7 +728,7 @@
     }
    ],
    "source": [
-    "# Make sure columns in df_X_scrambled is scrambled\n",
+    "# Make sure columns in df_X_scrambled is indeed scrambled\n",
     "nrows, ncols = 2, 5\n",
     "plt.figure(figsize=(6,3))\n",
     "# plt.gray()\n",
